[project]
name = "ipahound"
version = "0.0.1"
description = "FreeIPA data collector for BloodHound"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
authors = [
    { name = "Mikhail Sukhov", email = "msukhov@ptsecurity.com" }
]
keywords = ["freeipa", "ldap", "security", "bloodhound", "neo4j"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]

dependencies = [
    "ldap3>=2.9.1",
    "rich>=14.2.0",
]

[project.scripts]
ipahound = "ipahound.main:main"

[project.urls]
Homepage = "https://github.com/IPAHound/IPAHound"
Documentation = "https://github.com/IPAHound/IPAHound#readme"
Repository = "https://github.com/IPAHound/IPAHound.git"
Issues = "https://github.com/IPAHound/IPAHound/issues"
